# INST414-Breast-Cancer-ML

./: Makefile  README.md  pyproject.toml
breast_cancer_ml/: Data Acquisition.ipynb  Feature Engineering.ipynb  Feature Engineering.py  __init__.py  config.py  dataset.py  features.py  old Feature Engineering.ipynb  pca_feats.py  plots.py
breast_cancer_ml/modeling/: nested_cv.py  predict.py  train.py  utilities_nested_cv.py
docs/: mkdocs.yml
docs/docs/: index.md
models/evaluation/: evaluation.py
models/predict/: random_forest_model.pkl  xgboost_model.pkl
notebooks/: 1 RF-feat-imp.ipynb  EDA.ipynb  Model Development.ipynb  RF Feat Imp.ipynb  features.ipynb
reports/: failed_predictions_rf.csv  failed_predictions_xgb.csv  important_pca_features.txt  model_evaluation.txt  nestedcv_best_parameters.json  nestedcv_evaluation_report.txt  original_feature_importance.csv  top10_original_features.txt  top10_pca_features.txt
reports/figures/: EDA.ipynb  Visualizations.ipynb  pca_feature_importance.csv
